# StockfishChessEngineFlutter

./: .gitignore  .metadata  CHANGELOG.md  README.md  README.origin.md  UPGRADING_STOCKFISH.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  example.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/loloof64/example/: MainActivity.kt
example/android/app/src/main/kotlin/com/loloof64/stockfish_chess_engine_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: edit_position_page.dart  fen_validation.dart  main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: stockfish_chess_engine.podspec
ios/Classes/: stockfish_chess_engine.cpp  stockfish_chess_engine.h
ios/Classes/Stockfish/src/: evaluate.h  memory.cpp  misc.cpp  misc.h  tt.cpp  uci.cpp
ios/Classes/Stockfish/src/nnue/: network.h  nnue_accumulator.h  nnue_misc.cpp
ios/Classes/fixes/: stream_fix.h
lib/: stockfish.dart  stockfish_bindings_generated.dart  stockfish_chess_engine.dart  stockfish_chess_engine_bindings_generated.dart  stockfish_state.dart
linux/: CMakeLists.txt
macos/: stockfish_chess_engine.podspec
macos/Classes/: stockfish_chess_engine.c  stockfish_chess_engine.cpp
macos/Classes/Stockfish/src/: benchmark.cpp  engine.cpp  misc.h  tune.cpp
macos/Classes/Stockfish/src/nnue/: network.cpp
macos/Classes/fixes/: stream_fix.cpp  stream_fix.h
src/: CMakeLists.txt  commands_queue.cpp  commands_queue.h  fix_minmax.h  fixes.h  pipe.c  pipe.h  small_fixes.h  stockfish.cpp  stockfish.h  stockfish_chess_engine.c  stockfish_chess_engine.cpp  stockfish_chess_engine.h  stockfish_main.cpp  stockfish_main.h  stream_fix.h  unistd.h
src/Stockfish/src/: bitboard.h  evaluate.cpp  evaluate.h  main.cpp  main.h  misc.cpp  misc.h  position.cpp  position.h  search.cpp  thread.cpp  tt.cpp  tune.cpp  uci.cpp  uci.h  ucioption.cpp
src/Stockfish/src/nnue/: evaluate_nnue.cpp  network.cpp
src/Stockfish/src/syzygy/: tbprobe.cpp
src/fixes/: small_fixes.cpp  stream_fix.cpp
windows/: CMakeLists.txt
